@startuml star_schema
!define FACT_COLOR #003B53
!define DIM_COLOR #93BB25

skinparam backgroundColor white
skinparam linetype ortho
skinparam class {
  BackgroundColor<<fact>> FACT_COLOR
  FontColor<<fact>> white
  BackgroundColor<<dim>> DIM_COLOR
  FontColor<<dim>> white
  BorderColor #666666
  ArrowColor #666666
}

entity "FATO_VENDAS" as fato_vendas <<fact>> {
  * chave_venda : bigint <<PK>>
  --
  # chave_data_pedido : int <<FK>>
  # chave_data_envio : int <<FK>>
  # chave_data_vencimento : int <<FK>>
  # chave_cliente : int <<FK>>
  # chave_produto : int <<FK>>
  # chave_vendedor : int <<FK>>
  # chave_territorio : int <<FK>>
  # chave_promocao : int <<FK>>
  # chave_metodo_envio : int <<FK>>
  --
  numero_pedido_venda : varchar
  numero_linha_pedido : smallint
  id_detalhe_pedido : int
  quantidade_pedido : int
  preco_unitario : numeric
  desconto_preco_unitario : numeric
  valor_desconto : numeric
  total_linha : numeric
  custo_padrao : numeric
  valor_imposto : numeric
  frete : numeric
  data_modificacao_origem : timestamp
  marca_tempo_carregamento : timestamp
}

entity "DIM_DATA (SCD0)" as dim_data <<dim>> {
  * chave_data : int <<PK>>
  --
  data_completa : date
  dia_mes : smallint
  nome_dia : varchar
  dia_semana : smallint
  numero_mes : smallint
  nome_mes : varchar
  trimestre : smallint
  ano : smallint
  eh_fim_de_semana : boolean
  ano_fiscal : smallint
  trimestre_fiscal : smallint
}

entity "DIM_CLIENTE (SCD2)" as dim_cliente <<dim>> {
  * chave_cliente : int <<PK>>
  --
  id_cliente : int (BK)
  nome_cliente : varchar
  tipo_cliente : varchar
  cidade : varchar
  estado_provincia : varchar
  pais_regiao : varchar
  codigo_postal : varchar
  data_efetiva : date
  data_fim : date
  eh_vigente : boolean
  hash_linha : varchar
}

entity "DIM_PRODUTO (SCD2)" as dim_produto <<dim>> {
  * chave_produto : int <<PK>>
  --
  id_produto : int (BK)
  nome_produto : varchar
  numero_produto : varchar
  cor : varchar
  tamanho : varchar
  nome_subcategoria : varchar
  nome_categoria : varchar
  custo_padrao : numeric
  preco_tabela : numeric
  data_efetiva : date
  data_fim : date
  eh_vigente : boolean
  hash_linha : varchar
}

entity "DIM_VENDEDOR (SCD2)" as dim_vendedor <<dim>> {
  * chave_vendedor : int <<PK>>
  --
  id_funcionario : int (BK)
  nome_completo : varchar
  cargo : varchar
  data_efetiva : date
  data_fim : date
  eh_vigente : boolean
  hash_linha : varchar
}

entity "DIM_TERRITORIO (SCD1)" as dim_territorio <<dim>> {
  * chave_territorio : int <<PK>>
  --
  id_territorio : int (BK)
  nome_territorio : varchar
  codigo_pais_regiao : varchar
  grupo_territorio : varchar
}

entity "DIM_PROMOCAO (SCD1)" as dim_promocao <<dim>> {
  * chave_promocao : int <<PK>>
  --
  id_oferta_especial : int (BK)
  descricao : varchar
  percentual_desconto : numeric
  tipo_promocao : varchar
  categoria_promocao : varchar
  data_inicio : date
  data_fim : date
}

entity "DIM_METODO_ENVIO (SCD1)" as dim_metodo_envio <<dim>> {
  * chave_metodo_envio : int <<PK>>
  --
  id_metodo_envio : int (BK)
  nome : varchar
  base_envio : numeric
  taxa_envio : numeric
}

dim_data ||--o{ fato_vendas
dim_cliente ||--o{ fato_vendas
dim_produto ||--o{ fato_vendas
dim_vendedor ||--o{ fato_vendas
dim_territorio ||--o{ fato_vendas
dim_promocao ||--o{ fato_vendas
dim_metodo_envio ||--o{ fato_vendas

@enduml
